k83/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: paypal.login
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-front
                port:
                  number: 80
    - host: phishing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-back
                port:
                  number: 5000
